# my-vibe-coding-toys

./: .gitignore  README.md  dependence.md  dev_workflow_guide.md  tree.txt
GPU_Vigil/: README.md  index.html  pyproject.toml  server.py  start.sh
Music_Player/: README.md  pyproject.toml
Music_Player/.pyre/: pyre.stderr
Music_Player/src/: server.py
pytorch-visual-builder/: README.md  package-lock.json  package.json
pytorch-visual-builder/src/: App.js
