[project]
name = "gpumonitor"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Invoker-pray", email = "jiaohongbao04@gmail.com" }
]
dependencies = [
    "flask>=3.1.3",
    "psutil>=7.2.2",
    "flask-cors>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gpumonitor"]
